--- a/tasks/install_xorg/freebsd/main.yml
+++ b/tasks/install_xorg/freebsd/main.yml
@@ -1,22 +1,22 @@
 - name: "Install packages from xorg-minimal package group"
   block:
-    - name: "Install 'xorg-server', for the main Xorg server"
+    - name: "Install 'xorg-server' package, for the main Xorg server"
       ansible.builtin.package:
         name: xorg-server
         state: present
-    - name: "Install 'xorg-xinit', for Xorg windows system initializer"
+    - name: "Install 'xinit' package, for Xorg windows system initializer"
       ansible.builtin.package:
-        name: xorg-xinit
+        name: xinit
         state: present
-    - name: "Install 'xorg-xauth', for Xorg authority file utility"
+    - name: "Install 'xauth' package, for Xorg authority file utility"
       ansible.builtin.package:
-        name: xorg-xauth
+        name: xauth
         state: present
-    - name: "Install 'xf86-input-libinput', for Xorg wrapper around libinput"
+    - name: "Install 'xf86-input-libinput' package, for Xorg libinput wrapper"
       ansible.builtin.package:
         name: xf86-input-libinput
         state: present
-    - name: "Install 'xf86-video-vesa', for the fallback Xorg video driver"
+    - name: "Install 'xf86-video-vesa' package, for fallback Xorg video driver"
       # Note xf86-video-vesa is fallback graphics driver, and may not be required:
       #   https://forums.FreeBSD.org/threads/startx-not-coming-up.61320/post-368542
       ansible.builtin.package:
