--- a/tasks/install_ctl_ctr/freebsd/main.yml
+++ b/tasks/install_ctl_ctr/freebsd/main.yml
@@ -5,12 +5,26 @@
   become: true
   become_user: root
 
-# - name: "Install 'network-manager-applet' package"
-#   community.general.pacman:
-#     name: network-manager-applet
-#     state: present
-#   become: true
-#   become_user: root
+- name: "Install 'networkmgr', a non-mate package for network panel applet"
+  ansible.builtin.package:
+    name: networkmgr
+    state: present
+  become: true
+  become_user: root
+
+- name: "In sudo settings, configure user '{{ user_name }}'for networkmgr permissions"
+  ansible.builtin.include_role:
+    name: ext/ans_role_config_sudo
+  vars:
+    set_auth_for_user: "{{ user_name }}"
+    auth_cmd_list:
+      - '/sbin/ifconfig'
+      - '/usr/bin/killall'
+      - '/usr/local/bin/networkmgr'
+      - '/usr/local/bin/networkmgr'
+      - '/usr/sbin/service'
+      - '/usr/sbin/wpa_supplicant'
+    req_sudo_password: false
 
 - name: "Install 'mate-media' package, for sound support"
   ansible.builtin.package:
