applications_menu: rename firefox app menu item

--- a/tasks/config_start_menus/applications_menu.yml
+++ b/tasks/config_start_menus/applications_menu.yml
@@ -45,6 +45,7 @@
     - { basename: 'pluma', title: 'Pluma Text Editor' }
     - { basename: 'atril', title: 'Atril PDF Document Viewer' }
     - { basename: 'vlc', title: 'VLC Video Player' }
+    - { basename: 'firefox', title: 'Firefox' }
 
 - name: "Set mouse-hover tooltip for select 'Applications' start menu entries"
   ansible.builtin.include_tasks: func/desktop_entry_tooltip.yml
