--- a/tasks/config_start_menus/applications_menu.yml
+++ b/tasks/config_start_menus/applications_menu.yml
@@ -18,10 +18,19 @@
     - "mate-font-viewer"
     - "mate-power-statistics"
     - "mate-system-log"
+    - "mate-volume-control"
     - "org.fontforge.FontForge"
     - "qv4l2"
     - "qvidcap"
     - "vim"
+
+- name: "Set icon for select 'Applications' start menu entries"
+  ansible.builtin.include_tasks: func/desktop_entry_icon.yml
+  vars:
+    desktop_file_basename: "{{ item.basename }}"
+    icon: "{{ item.ic }}"
+  loop:
+    - { basename: 'gtkmixer', ic: 'multimedia-volume-control' }
 
 - name: "Set submenu category for select 'Applications' start menu entries"
   ansible.builtin.include_tasks: func/desktop_entry_category.yml
@@ -29,6 +38,7 @@
     desktop_file_basename: "{{ item.basename }}"
     category: "{{ item.cat }}"
   loop:
+    - { basename: 'gtkmixer', cat: 'Mixer;Settings;HardwareSettings' }
     - { basename: 'libreoffice-draw', cat: 'Graphics' }
     - { basename: 'libreoffice-math', cat: 'Office' }
     - { basename: 'mate-search-tool', cat: 'Core' }
@@ -41,11 +51,12 @@
     desktop_file_basename: "{{ item.basename }}"
     title: "{{ item.title }}"
   loop:
+    - { basename: 'atril', title: 'Atril PDF Document Viewer' }
+    - { basename: 'firefox', title: 'Firefox' }
+    - { basename: 'gtkmixer', title: 'Sound (GTK-Mixer)' }
     - { basename: 'libreoffice-startcenter', title: 'LibreOffice Start Page' }
     - { basename: 'pluma', title: 'Pluma Text Editor' }
-    - { basename: 'atril', title: 'Atril PDF Document Viewer' }
     - { basename: 'vlc', title: 'VLC Video Player' }
-    - { basename: 'firefox', title: 'Firefox' }
 
 - name: "Set mouse-hover tooltip for select 'Applications' start menu entries"
   ansible.builtin.include_tasks: func/desktop_entry_tooltip.yml
@@ -54,6 +65,7 @@
     tooltip: "{{ item.tooltip }}"
   loop:
     - { basename: 'atril', tooltip: 'View multi-page PDF documents' }
+    - { basename: 'gtkmixer', tooltip: 'GTK sound device and volume control' }
     - { basename: 'libreoffice-startcenter', tooltip: 'Open recent LibreOffice docs, or create new ones' }
     - { basename: 'vlc', tooltip: 'Play video/audio files and DVDs' }
 
