--- a/tasks/install_ctl_ctr/freebsd/main.yml
+++ b/tasks/install_ctl_ctr/freebsd/main.yml
@@ -34,6 +34,14 @@
   become_user: root
   when: enable_sound_support
 
+- name: "Install 'gtk-mixer', a non-mate package for sound settings config"
+  ansible.builtin.package:
+    name: gtk-mixer
+    state: present
+  become: true
+  become_user: root
+  when: enable_sound_support
+
 - name: "Install 'system-config-printer' package, for printing support"
   ansible.builtin.package:
     name: system-config-printer
