Fixup gtk-mixer desktop entry, and icon func

--- a/tasks/config_start_menus/applications_menu.yml
+++ b/tasks/config_start_menus/applications_menu.yml
@@ -53,7 +53,7 @@
   loop:
     - { basename: 'atril', title: 'Atril PDF Document Viewer' }
     - { basename: 'firefox', title: 'Firefox' }
-    - { basename: 'gtkmixer', title: 'Sound (GTK-Mixer)' }
+    - { basename: 'gtkmixer', title: 'Sound' }
     - { basename: 'libreoffice-startcenter', title: 'LibreOffice Start Page' }
     - { basename: 'pluma', title: 'Pluma Text Editor' }
     - { basename: 'vlc', title: 'VLC Video Player' }
