--- a/tasks/install_ctl_ctr/freebsd/main.yml
+++ b/tasks/install_ctl_ctr/freebsd/main.yml
@@ -43,8 +43,7 @@
     state: present
   become: true
   become_user: root
-  when: enable_sound_support
-  when: ansible_os_family == "FreeBSD"
+  when: (enable_sound_support) and (ansible_os_family == "FreeBSD")
 
 - name: "Install 'system-config-printer' package, for printing support"
   ansible.builtin.package:
