Add menu-title-rename for gscan2pdf app

--- a/tasks/config_start_menus/applications_menu.yml
+++ b/tasks/config_start_menus/applications_menu.yml
@@ -60,6 +60,7 @@
     - { basename: 'firefox', title: 'Firefox' }
     - { basename: 'gtkmixer', title: 'Sound' }
     - { basename: 'libreoffice-startcenter', title: 'LibreOffice Start Page' }
+    - { basename: 'net.sourceforge.gscan2pdf', title: 'gscan2pdf Document Scanner' }
     - { basename: 'pluma', title: 'Pluma Text Editor' }
     - { basename: 'vlc', title: 'VLC Video Player' }
 
