--- a/tasks/config_start_menus/applications_menu.yml
+++ b/tasks/config_start_menus/applications_menu.yml
@@ -58,7 +58,8 @@
   loop:
     - { basename: 'atril', title: 'Atril PDF Document Viewer' }
     - { basename: 'com.obsproject.Studio', title: 'OBS Video Recording' }
-    - { basename: 'firefox', title: 'Firefox' }
+    - { basename: 'chromium-browser', title: 'Chromium (Backup & Video-Conference Browser)' }
+    - { basename: 'firefox', title: 'Firefox (Main Browser)' }
     - { basename: 'gtkmixer', title: 'Sound' }
     - { basename: 'libreoffice-startcenter', title: 'LibreOffice Start Page' }
     - { basename: 'net.sourceforge.gscan2pdf', title: 'gscan2pdf Document Scanner' }
