--- a/tasks/install_ctl_ctr/freebsd/main.yml
+++ b/tasks/install_ctl_ctr/freebsd/main.yml
@@ -1,55 +1,14 @@
-- name: "Install 'mate-power-manager' package"
-  ansible.builtin.package:
-    name: mate-power-manager
-    state: present
-  become: true
-  become_user: root
+- name: "Install network components"
+  ansible.builtin.include_tasks: network.yml
 
-- name: "Install 'networkmgr', a non-mate package for network panel applet"
-  ansible.builtin.package:
-    name: networkmgr
-    state: present
-  become: true
-  become_user: root
+- name: "Install power components"
+  ansible.builtin.include_tasks: power.yml
 
-- name: "In sudo settings, configure user '{{ user_name }}'for networkmgr permissions"
-  ansible.builtin.include_role:
-    name: ext/ans_role_config_sudo
-  vars:
-    set_auth_for_user: "{{ user_name }}"
-    auth_cmd_list:
-      - '/sbin/ifconfig'
-      - '/usr/bin/killall'
-      - '/usr/local/bin/networkmgr'
-      - '/usr/local/bin/networkmgr'
-      - '/usr/sbin/service'
-      - '/usr/sbin/wpa_supplicant'
-    req_sudo_password: false
-
-- name: "Install 'mate-media' package, for sound support"
-  ansible.builtin.package:
-    name: mate-media
-    state: present
-  become: true
-  become_user: root
-  when: enable_sound_support
-
-- name: "Install 'gtk-mixer', a non-mate package for sound settings config"
-  # NOTE:
-  #   * The FreeBSD MATE sound-prefs-app can't set new default device (JAN 2022).
-  #   * Best way of finding replacement app was using pkg search for 'mixer'.
-  ansible.builtin.package:
-    name: gtk-mixer
-    state: present
-  become: true
-  become_user: root
-  when: (enable_sound_support) and (ansible_os_family == "FreeBSD")
-
-- name: "Install 'system-config-printer' package, for printing support"
-  ansible.builtin.package:
-    name: system-config-printer
-    state: present
-  become: true
-  become_user: root
+- name: "Install printer components"
+  ansible.builtin.include_tasks: printer.yml
   when: enable_printing_support
+
+- name: "Install sound components"
+  ansible.builtin.include_tasks: sound.yml
+  when: enable_sound_support
 
