--- a/tasks/install_xorg/main.yml
+++ b/tasks/install_xorg/main.yml
@@ -1,8 +1,4 @@
-- name: "Install and configure Xorg for Arch Linux"
-  ansible.builtin.include_tasks: archlinux/main.yml
-  when: ansible_os_family == "Archlinux"
-
-- name: "Install and configure Xorg for FreeBSD"
-  ansible.builtin.include_tasks: freebsd/main.yml
-  when: ansible_os_family == "FreeBSD"
+- name: "Install and configure Xorg"
+  ansible.builtin.include_role:
+    name: ans_role_config_xorg
 
