Hide select GTK4 items from MATE Start Menu

--- a/tasks/config_start_menus/applications_menu.yml
+++ b/tasks/config_start_menus/applications_menu.yml
@@ -19,6 +19,10 @@
     - 'mate-power-statistics'
     - 'mate-system-log'
     - 'org.fontforge.FontForge'
+    - 'org.gtk.Demo4'
+    - 'org.gtk.IconBrowser4'
+    - 'org.gtk.PrintEditor4'
+    - 'org.gtk.WidgetFactory4'
     - 'qv4l2'
     - 'qvidcap'
     - 'vim'
