Hide node-editor from apps menu

--- a/tasks/config_start_menus/applications_menu.yml
+++ b/tasks/config_start_menus/applications_menu.yml
@@ -23,6 +23,7 @@
     - 'org.gtk.IconBrowser4'
     - 'org.gtk.PrintEditor4'
     - 'org.gtk.WidgetFactory4'
+    - 'org.gtk.gtk4.NodeEditor'
     - 'qv4l2'
     - 'qvidcap'
     - 'vim'
