Conv all yes/no to true/false

--- a/tasks/func/desktop_entry.yml
+++ b/tasks/func/desktop_entry.yml
@@ -12,9 +12,9 @@
     line: "{{ line_replacement }}"
     insertafter: >-
       ^\[Desktop Entry\]$
-    firstmatch: yes
+    firstmatch: true
     state: present
-    create: no
+    create: false
   become: true
   become_user: root
   when: result.stat.exists
