--- a/tasks/install_mate_sys/freebsd/main.yml
+++ b/tasks/install_mate_sys/freebsd/main.yml
@@ -3,7 +3,7 @@
   ansible.builtin.service:
     name: dbus
     state: started
-    enabled: yes
+    enabled: true
   become: true
   become_user: root
 
