Min Mate Install: add dconf editor (now req)
- In Mate version 1.28, the panel (both top and bottom) widgets do not work without dconf-editor installed. Seems to be a problem for both FreeBSD and Linux.

--- a/tasks/config_start_menus/applications_menu.yml
+++ b/tasks/config_start_menus/applications_menu.yml
@@ -28,6 +28,7 @@
     - 'qv4l2'
     - 'qvidcap'
     - 'vim'
+    - 'ca.desrt.dconf-editor'
 
 - name: "For FreeBSD, hide MATE sound-prefs-app, since GTK-mixer replaces it"
   ansible.builtin.include_tasks: func/desktop_entry_hide.yml
