--- a/tasks/install_mate_min/main.yml
+++ b/tasks/install_mate_min/main.yml
@@ -18,6 +18,8 @@
     - mate-session-manager
     - mate-settings-daemon
     - mate-themes
+    # Note: in Mate 1.28, both Linux and FreeBSD panels are broken without this
+    - dconf-editor
   become: true
   become_user: root
 
